2008-09-02  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpselectiondata.c (gimp_selection_data_get_name):
	return a const string, no need to strdup it since it's only used
	temporarily in this file.

	(gimp_selection_data_get_image)
	(gimp_selection_data_get_component)
	(gimp_selection_data_get_item)
	(gimp_selection_data_get_object): changed accordingly. Move
	variables to local scopes and simplify.

2008-09-02  Sven Neumann  <sven@gimp.org>

	* configure.in: removed ALL_LINGUAS definition.

	* po*/LINGUAS: introduced LINGUAS file instead. This allows to
	keep individual lists of languages for each textdomain and it
	makes it easier for translators to add a new language.

2008-09-01  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginshm.c (gimp_plug_in_shm_new): use the
	constant INVALID_FILE_HANDLE instead of 0xFFFFFFFF. Fixes shared
	memory tile transport on 64bit Windows systems.

2008-09-01  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.[ch]: added clear_region().

	* app/base/tile-manager-crop.c
	* app/core/gimpchannel.c
	* app/core/gimpimage-merge.c
	* app/core/gimpmaskundo.c
	* app/core/gimpprojection-construct.c: use it instead of calling
	color_region() with a zero color.

2008-09-01  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection-construct.c (gimp_projection_initialize):
	also need to initialize the projection if the layer mask could
	introduce transparency. Fixes bug #550024.

2008-08-31  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_set_initial_scale): We need to set the scale
	before using it. Fixes at least gimp_display_shell_fill() and
	Image -> Duplicate giving weird initial scales.

2008-08-30  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c (test_clipboard_paste): fix length
	calculation (in fact, no calculation is needed at all).

2008-08-29  Sven Neumann  <sven@gimp.org>

	* authors.xml: fixed role of Aurore Derriennic.
