@@ -1,5 +1,11 @@
 2008-09-02  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpselectiondata.c: no need to set strlen(sting)+1
+	bytes on the GtkSelectionData because gtk_selection_data_set()
+	zero-terminates all data anyway.
+
+2008-09-02  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpselectiondata.c (gimp_selection_data_get_name):
 	return a const string, no need to strdup it since it's only used
 	temporarily in this file.
